--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </head>
 
 <body>
+    <space>
     <!-- Cover de l 'artiste  -->
      <div><img src="https://m.media-amazon.com/images/I/51DExWJiIzL._UF894,1000_QL80_.jpg" width= 400 alt="Album 24K Magic de Bruno Mars" class="center"></div>
 
@@ -26,7 +27,7 @@
 <div><h2>Bruno Mars</h2></div>
 <!-- Année  -->
  <div><h3>2016</h3></div>
-
+</space>
  <!-- Vidéo Youtube  -
 
 Tracklist (liste des chansons)
@@ -35,6 +36,7 @@ Tracklist (liste des chansons)
     3.
     ....
 Autres albums de l'artiste -->
+
 <ol>
     <li><a href="https://open.spotify.com/intl-fr/album/4PgleR09JVnm3zY1fW3XBA" target="_blank"> 24K Magic</a>
     </li>
@@ -63,11 +65,14 @@ Autres albums de l'artiste -->
 
     <li><a href="">Too Good to Say Goodbye</a>
     </li>
+</space>
 
+<space>
 </ol>
 <div><h2>Albums de Bruno Mars</h2></div>
 
 <img src="https://static.fnac-static.com/multimedia/FR/Images_Produits/FR/fnac.com/Visual_Principal_340/7/5/8/0075678762857/tsp20121211113219/Unorthodox-jukebox.jpg">
+
 
 <img src="https://cdns-images.dzcdn.net/images/cover/4bd5903f4ce8f2601916bfadb44efe8a/0x1900-000000-80-0-0.jpg" alt="Album Bruno Mars et Lady Gaga">
 
@@ -75,7 +80,7 @@ Autres albums de l'artiste -->
 
 
 
-
+</space>
 
 </body> 
 
