Add Header and footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 
+    <header></header>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/">accueil</a>
+        </li>
+        <li>
+          <a href="https://latoile.em-lyon.com/" target="_blank">formation</a>
+        </li>
+        <li>
+          <a href="https://em-lyon.com/" target="_blank">em lyon</a>
+        </li>
+      </ul>
+    </nav>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,6 +95,10 @@ Autres albums de l'artiste -->
 
 
 </space>
+
+<footer>
+    <p>© CodeMakers 2024</p>
+  </footer>
 
 </body> 
 
