liens youtube ok

--- a/index.html
+++ b/index.html
@@ -52,32 +52,33 @@ Tracklist (liste des chansons)
 Autres albums de l'artiste -->
 
 <ol>
-    <li><a href="https://open.spotify.com/intl-fr/album/4PgleR09JVnm3zY1fW3XBA" target="_blank"> 24K Magic</a>
+    <li><a href="https://www.youtube.com/watch?v=UqyT8IEBkvY" target="_blank"> 24K Magic</a>
     </li>
 
 
-    <li><a href="https://open.spotify.com/intl-fr/track/0mBKv9DkYfQHjdMcw2jdyI" target="_blank"> Chunky</a>
+    <li><a href="https://www.youtube.com/watch?v=oacaq_1TkMU" target="_blank"> Chunky</a>
     </li>
 
-    <li><a href="https://open.spotify.com/intl-fr/track/1I6pKIyaBp4OebTGLJpCCC" target="_blank">Perm </a>
+    <li><a href="https://www.youtube.com/watch?v=ftXmvnL0ZOc" target="_blank">Perm </a>
     </li>
 
-    <li><a href="">That's What I Like></a>
+    <li><a href="https://www.youtube.com/watch?v=oDx-65i78BE" target="_blank"> That's What I Like</a>
     </li>
 
-    <li><a href="">Versace On The Floor></a>
+    <li><a href="https://www.youtube.com/watch?v=3JbmE3jjCSk" target="_blank"> Versace On The Floor </a>
     </li>
 
-    <li><a href="">Straight Up & Down></a>
+    </li>
+    <li><a href="https://www.youtube.com/watch?v=oDx-65i78BE" target="_blank">Straight Up & Down</a>
     </li>
     
-    <li><a href="">Calling All My Lovelies></a>
+    <li><a href="https://www.youtube.com/watch?v=QV5fwAiStzo"target="_blank">Calling All My Lovelies</a>
     </li>
 
-    <li><a href="">Finesse></a>
+    <li><a href="https://www.youtube.com/watch?v=MRSaiAREnwI"target="_blank">Finesse</a>
     </li>
 
-    <li><a href="">Too Good to Say Goodbye</a>
+    <li><a href="https://www.youtube.com/watch?v=SviE5fHCV0c" target="_blank">Too Good to Say Goodbye</a>
     </li>
 </space>
 
