mise en forme titres

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header></header>
-    <nav>
+  <nav>
       <ul>
         <li>
           <a href="https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/">accueil</a>
@@ -34,20 +34,23 @@
           <a href="https://em-lyon.com/" target="_blank">em lyon</a>
         </li>
       </ul>
-    </nav>
+  </nav>
 <!-- Partie visible. C'est là où on met tout le contenu du site -->
-    <space>
+    <div id="header">
     <!-- Cover de l 'artiste  -->
-     <div>
-      <img src="https://m.media-amazon.com/images/I/51DExWJiIzL._UF894,1000_QL80_.jpg" width= 400 alt="Album 24K Magic de Bruno Mars" class="center"></div>
+      <div id="image">
+      <img src="https://m.media-amazon.com/images/I/51DExWJiIzL._UF894,1000_QL80_.jpg" width= 400 alt="Album 24K Magic de Bruno Mars">
+      </div>
+      <div id="text">
+      <h1>24K Magic</h1>
+      <!-- Titre de l'album -->
+      <h2>Bruno Mars</h2>
+      <!-- Nom de l'artiste -->
+      <h3>2016</h3>
+      <!-- Année  -->
+      </div>
+    </div> 
 
-<!-- Titre de l'album -->
-<div><h1>24K Magic</h1></div>
-<!-- Nom de l'artiste -->
-<div><h2>Bruno Mars</h2></div>
-<!-- Année  -->
- <div><h3>2016</h3></div>
-</space>
  <!-- Vidéo Youtube  -
 
 Tracklist (liste des chansons)
