--- a/index.html
+++ b/index.html
@@ -42,23 +42,16 @@
       <img src="https://m.media-amazon.com/images/I/51DExWJiIzL._UF894,1000_QL80_.jpg" width= 400 alt="Album 24K Magic de Bruno Mars">
       </div>
       <div id="text">
-      <h1>24K Magic</h1>
       <!-- Titre de l'album -->
-      <h2>Bruno Mars</h2>
+      <h1>24K Magic</h1>
       <!-- Nom de l'artiste -->
-      <h3>2016</h3>
+      <h2>Bruno Mars</h2>
       <!-- Année  -->
-      </div>
-    </div> 
-
- <!-- Vidéo Youtube  -
-
-Tracklist (liste des chansons)
-    1.
-    2.
-    3.
-    ....
-Autres albums de l'artiste -->
+      <h3>2016</h3>
+      <!-- Tracklist (liste des chansons) 1. 2. 3. 4.  -->
+      <h4>Tracklist</h4>
+    
+<!--Autres albums de l'artiste  -->
 
 <ol>
     <li><a href="https://www.youtube.com/watch?v=UqyT8IEBkvY" target="_blank"> 24K Magic</a>
@@ -89,11 +82,12 @@ Autres albums de l'artiste -->
 
     <li><a href="https://www.youtube.com/watch?v=SviE5fHCV0c" target="_blank">Too Good to Say Goodbye</a>
     </li>
-</space>
-
-<space>
 </ol>
-<div><h2>Albums de Bruno Mars</h2></div>
+      </div>
+    </div>
+<space>
+
+<div><h2>Albums de Bruno Mars</h2>
 
 <img src="https://static.fnac-static.com/multimedia/FR/Images_Produits/FR/fnac.com/Visual_Principal_340/7/5/8/0075678762857/tsp20121211113219/Unorthodox-jukebox.jpg">
 
