html et mise en page

--- a/index.html
+++ b/index.html
@@ -85,24 +85,20 @@
 </ol>
       </div>
     </div>
-<space>
-
-<div><h2>Albums de Bruno Mars</h2>
-
-<img src="https://static.fnac-static.com/multimedia/FR/Images_Produits/FR/fnac.com/Visual_Principal_340/7/5/8/0075678762857/tsp20121211113219/Unorthodox-jukebox.jpg">
 
 
-<img src="https://cdns-images.dzcdn.net/images/cover/4bd5903f4ce8f2601916bfadb44efe8a/0x1900-000000-80-0-0.jpg" alt="Album Bruno Mars et Lady Gaga">
-
-<img src="https://static.fnac-static.com/multimedia/Images/FR/NR/2f/62/d3/13853231/1540-1/tsp20211011084946/An-Evening-With-Silk-Sonic.jpg" alt="Album Silk Sonic de Bruno Mars"> 
-
+    <div id=" discographie">
+    <h4>Albums de Bruno Mars</h4>
 
 
-</space>
+    <img src="https://static.fnac-static.com/multimedia/FR/Images_Produits/FR/fnac.com/Visual_Principal_340/7/5/8/0075678762857/tsp20121211113219/Unorthodox-jukebox.jpg">
+    <img src="https://cdns-images.dzcdn.net/images/cover/4bd5903f4ce8f2601916bfadb44efe8a/0x1900-000000-80-0-0.jpg" alt="Album Bruno Mars et Lady Gaga">
+    <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/2f/62/d3/13853231/1540-1/tsp20211011084946/An-Evening-With-Silk-Sonic.jpg" alt="Album Silk Sonic de Bruno Mars"> 
+    </div>
 
-<footer>
+    <footer>  
     <p>© CodeMakers 2024</p>
-  </footer>
+    </footer>
 
 </body> 
 
