update title emlyon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="https://latoile.em-lyon.com/" target="_blank">formation</a>
         </li>
         <li>
-          <a href="https://em-lyon.com/" target="_blank">em lyon</a>
+          <a href="https://em-lyon.com/" target="_blank">emlyon Business School Paris</a>
         </li>
       </ul>
   </nav>
